INPR-13: fix text-wrap

--- a/src/WeatherCards/WeatherCards.scss
+++ b/src/WeatherCards/WeatherCards.scss
@@ -21,6 +21,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 225px;
+  height: 406px;
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
   .WeatherCard__Header {
     display: flex;
     align-items: center;
@@ -55,6 +62,10 @@
   }
   .WeatherCard__Rec {
     font-size: $font-medium;
+    overflow-wrap: break-word;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
   }
 }
 
